tests/expectations/parser-statement/statement/exported_type_fail.out
{
  "Return": {
    "expression": {
      "Struct": {
        "path": {
          "qualifier": [],
          "identifier": {
            "name": "credits",
            "span": {
              "lo": 19,
              "hi": 27
            },
            "id": 10
          },
          "is_absolute": false,
          "absolute_path": null,
          "span": {
            "lo": 19,
            "hi": 27
          },
          "id": 11
        },
        "const_arguments": [],
        "members": [
          {
            "identifier": {
              "name": "owner",
              "span": {
                "lo": 30,
                "hi": 35
              },
              "id": 4
            },
            "expression": {
              "Path": {
                "qualifier": [],
                "identifier": {
                  "name": "arg1",
                  "span": {
                    "lo": 37,
                    "hi": 41
                  },
                  "id": 3
                },
                "is_absolute": false,
                "absolute_path": null,
                "span": {
                  "lo": 37,
                  "hi": 41
                },
                "id": 2
              }
            },
            "span": {
              "lo": 30,
              "hi": 41
            },
            "id": 5
          },
          {
            "identifier": {
              "name": "amount",
              "span": {
                "lo": 43,
                "hi": 49
              },
              "id": 8
            },
            "expression": {
              "Path": {
                "qualifier": [],
                "identifier": {
                  "name": "arg2",
                  "span": {
                    "lo": 51,
                    "hi": 55
                  },
                  "id": 7
                },
                "is_absolute": false,
                "absolute_path": null,
                "span": {
                  "lo": 51,
                  "hi": 55
                },
                "id": 6
              }
            },
            "span": {
              "lo": 43,
              "hi": 55
            },
            "id": 9
          }
        ],
        "program": "credits",
        "span": {
          "lo": 7,
          "hi": 56
        },
        "id": 1
      }
    },
    "span": {
      "lo": 0,
      "hi": 57
    },
    "id": 0
  }
}

Error [EPAR0370005]: expected '=', '::', '?' -- found '.'
    --> test_1:1:13
     |
   1 | let d: board.leo/board = record board.leo/board { tile1: 1u8, tile2: 2u8};
     |             ^
